@@ -295,45 +295,3 @@ class S3Filesystem(Filesystem):
         bucket = _get_bucket(s3_conn, bucket_name)
         for key in bucket.list(key_prefix):
             yield key
-
-    def get_s3_folder_keys(self, uri, s3_conn=None):
-        """.. deprecated:: 0.4.0
-
-        Background: EMR used to fake directories on S3 by creating special
-        ``*_$folder$`` keys in S3. That is no longer true, so this method is
-        deprecated.
-
-        For example if your job outputs ``s3://walrus/tmp/output/part-00000``,
-        EMR will also create these keys:
-
-        - ``s3://walrus/tmp_$folder$``
-        - ``s3://walrus/tmp/output_$folder$``
-
-        If you want to grant another Amazon user access to your files so they
-        can use them in S3, you must grant read access on the actual keys,
-        plus any ``*_$folder$`` keys that "contain" your keys; otherwise
-        EMR will error out with a permissions error.
-
-        This gets all the ``*_$folder$`` keys associated with the given URI,
-        as boto Key objects.
-
-        This does not support globbing.
-
-        You may optionally pass in an existing S3 connection through
-        ``s3_conn``.
-        """
-        log.warning(
-            'get_s3_folder_keys() is deprecated and will be removed in v0.5.0')
-
-        if not s3_conn:
-            s3_conn = self.make_s3_conn()
-
-        bucket_name, key_name = parse_s3_uri(uri)
-        bucket = _get_bucket(s3_conn, bucket_name)
-
-        dirs = key_name.split('/')
-        for i in range(len(dirs)):
-            folder_name = '/'.join(dirs[:i]) + '_$folder$'
-            key = bucket.get_key(folder_name)
-            if key:
-                yield key
